[workspace]
members = [
    "raven_core",
    "raven_ecs",
    "raven_ecs_proc",
    "raven_ecs_test",
    "raven_editor",
    "raven_runtime",
]

[patch.crates-io]
imgui = { git = "https://github.com/NoxWings/imgui-rs", tag = "1.81dock" }
imgui-sys = { git = "https://github.com/NoxWings/imgui-rs", tag = "1.81dock" }
