[workspace]
members = [
    "raven_core",
    "raven_ecs",
    "raven_ecs_proc",
    "raven_ecs_example",
    "raven_editor",
    "raven_runtime",
    "raven_import_demo",
]

[patch.crates-io]
imgui = { git = "https://github.com/NoxWings/imgui-rs", tag = "1.81dock" }
imgui-sys = { git = "https://github.com/NoxWings/imgui-rs", tag = "1.81dock" }
