[workspace]
members = [
    "raven_core",
    "raven_ecs",
    "raven_ecs_proc",
    "raven_ecs_example",
    "raven_editor",
    "raven_runtime",
]

[patch.crates-io]
# Because the upstream imgui crate doesn't expose the docking branch
imgui-sys = { path="../imgui-rs/imgui-sys" }
# Because the docking bindings present some fixes that have been fixed here
imgui = { path="../imgui-rs/imgui" }
# Because the upstream crate hasn't been updated to imgui=0.8.0
imgui-opengl-renderer = { git="https://github.com/eliaperantoni/rust-imgui-opengl-renderer" }
