[package]
name = "raven_core"
version = "0.1.0"
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.27.0"
glam = { version="0.16.0", features=["serde"] }
russimp = "0.2.2"
itertools = "0.10.1"
image = "0.23.14"
derivative = "2.2.0"
raven_ecs = { path = "../raven_ecs" }
serde = "1.0.127"
serde_json = "1.0.66"
bincode = "1.3.3"
