[package]
name = "raven_core"
version = "0.1.0"
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
glam = { version = "0.16.0", features = ["serde"] }
raven_ecs = { path = "../raven_ecs" }
serde = { version = "1.0.127", featuers = ["derive"] }
serde_json = "1.0.66"
bincode = "1.3.3"
