[package]
name = "raven_editor"
version = "0.1.0"
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.0"
imgui-sys = "0.8.0"
imgui-winit-support = { version = "0.8.0", default-features = false, features = ["winit-25"] }
imgui-opengl-renderer = "0.11.0"

glutin = "0.27.0"
gl = "0.14.0"
raven_core = { path = "../raven_core" }
nfd = "0.0.4"
image = "0.23.14"
russimp = "0.2.3"
itertools = "0.10.1"
md-5 = "0.9.1"
palette = "0.6.0"
glob = "0.3.0"
fs_extra = "1.2.0"
