[package]
name = "raven_import_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raven_core = { path = "../raven_core" }
image = "0.23.14"
russimp = "0.2.3"
itertools = "0.10.1"
md-5 = "0.9.1"
raven_ecs = { path = "../raven_ecs" }
