[package]
name = "raven_runtime"
version = "0.1.0"
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raven_core = { path="../raven_core" }
glutin = "0.27.0"
gl = "0.14.0"
